--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
 
   <h1>Mia Diaz</h1>
   <p>
-    <img src="miad.jpg" width="300" height="200" alt="me">
+    <marquee>  <img src="miad.jpg" width="300" height="200" alt="me"></marquee>
   </p>
   <p>
     <marquee>  Hi! I am a rising Junior from Yonkers High School </marquee>
