--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
 
   <h1>Mia Diaz</h1>
   <p>
-    <marquee>  <img src="miad.jpg" width="300" height="200" alt="me"></marquee>
+    <marquee>  <img src="miad.JPG" width="300" height="200" alt="me"></marquee>
   </p>
   <p>
     <marquee>  Hi! I am a rising Junior from Yonkers High School </marquee>
@@ -34,11 +34,11 @@
   <p>
   I watch a lot of shows on including : The 100, Teen Wolf, The Challenge, Gossip Girl, Greys Anatomy, On my Block, TWD, OTNB, The Good Doctor, Black Mirror, and <strong>much much</strong> more.
   </p>
-<button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
+<button onclick="document.getElementById('myImage').src='smilspaget.jfif'">smile</button>
 
-<img id="myImage" src="pic_bulboff.gif" style="width:100px">
+<img id="myImage" src="smilspaget.jfif" style="width:100px">
 
-<button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+<button onclick="document.getElementById('myImage').src='yumeat.jfif'">eat</button>
   <p>
      I take pictures for fun and you can see some on <a href="https://vsco.co/miakarine/images/1" > my VSCO profile!! :)</a>
   </p>
@@ -47,8 +47,8 @@
   <font size="5"> <strong> some people ik i guess </strong></font>
   </div>
 
-  <img src="familiafun.jpg" width="300" height="200" alt="fam">
-  <img src="prin.jpg" width="300" height="200" alt="dog">
+  <img src="familiafun.JPG" width="300" height="200" alt="fam">
+  <img src="prin.JPG" width="300" height="200" alt="dog">
   <p>
   I have an older sister that is 2 yrs older named Katherine and a younger brother named Thomas that is 10 years younger
   I also had a dog for 11 years named Princess and dont @ me but dogs are way better than cats
@@ -70,7 +70,7 @@
   </p>
 
   <div>
-      <p style="float: left;"><img src="hvrfun.jpg" height="200px" width="200px" border="1px"></p>
+      <p style="float: left;"><img src="hvrfun.JPG" height="200px" width="200px"></p>
       <p>I've been on a robotics team for the past 2 years and my team has gone to St. Louis and Detroit the past two years! </p>
   </div>
 
