--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
 
 <img id="myImage" src="smilspaget.jfif" style="width:100px">
 
-<button onclick="document.getElementById('myImage').src='yumeat.jfif'">eat</button>
+<button onclick="document.getElementById('myImage').src='giphy.gif'">eat</button>
   <p>
      I take pictures for fun and you can see some on <a href="https://vsco.co/miakarine/images/1" > my VSCO profile!! :)</a>
   </p>
