--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
 
   <body>
 
-  <h1>Mia Diaz</h1>
+  <h1>align="center">Mia Diaz</h1>
   <p>
     <marquee>  <img src="miad.JPG" width="300" height="200" alt="me"></marquee>
   </p>
