--- a/aboutme.html
+++ b/aboutme.html
@@ -34,11 +34,14 @@
   <p>
   I watch a lot of shows on including : The 100, Teen Wolf, The Challenge, Gossip Girl, Greys Anatomy, On my Block, TWD, OTNB, The Good Doctor, Black Mirror, and <strong>much much</strong> more.
   </p>
-<button onclick="document.getElementById('myImage').src='smilspaget.jfif'">smile</button>
+    <p align="center"> 
+<button onclick="document.getElementById('myImage').src='smilspaget.jfif'">stop</button>
 
 <img id="myImage" src="smilspaget.jfif" style="width:200px">
 
 <button onclick="document.getElementById('myImage').src='giphy.gif'">eat</button>
+      
+    </p>
   <p>
      I take pictures for fun and you can see some on <a href="https://vsco.co/miakarine/images/1" > my VSCO profile!! :)</a>
   </p>
