--- a/aboutme.html
+++ b/aboutme.html
@@ -46,12 +46,14 @@
      I take pictures for fun and you can see some on <a href="https://vsco.co/miakarine/images/1" > my VSCO profile!! :)</a>
   </p>
 
-  <div>
+  <div align="center">
   <font size="5"> <strong> some people ik i guess </strong></font>
   </div>
 
+    <p align="center">
   <img src="familiafun.JPG" width="300" height="200" alt="fam">
   <img src="prin.JPG" width="300" height="200" alt="dog">
+    </p>
   <p>
   I have an older sister that is 2 yrs older named Katherine and a younger brother named Thomas that is 10 years younger
   I also had a dog for 11 years named Princess and dont @ me but dogs are way better than cats
