--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
               background-color: #DDA0DD;
                   font-family: Arial, Helvetica, sans-serif;
               .changeColor {
-              background: white;
+              background: blue;
 
               transition: 0.3s all;
 
@@ -74,8 +74,7 @@
   </p>
 
   <div>
-      <p style="float: left;"><img src="hvrfun.JPG" height="200px" width="200px"></p>
-      <p>
+    <p style="float: left;"><img src="hvrfun.JPG" height="200px" width="200px"></p>
         
         
         I've been on a robotics team for the past 2 years and my team has gone to St. Louis and Detroit the past two years! </p>
@@ -83,11 +82,11 @@
 
   <p>
   follow my instagram and snapchat!! miaax15 <
-  i didnt finish but yeaaaaahh
+ 
   </p>
 
   <script src=”https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="colorchange.js”></script>
+   <script src=”colorchange.js”></script>
 
    </body>
 
