--- a/aboutme.html
+++ b/aboutme.html
@@ -77,7 +77,7 @@
     <p style="float: left;"><img src="hvrfun.JPG" height="200px" width="200px"></p>
         
         
-        I've been on a robotics team for the past 2 years and my team has gone to St. Louis and Detroit the past two years! </p>
+       <p> I've been on a robotics team for the past 2 years and my team has gone to St. Louis and Detroit the past two years! </p>
   </div>
 
   <p>
