--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
   </p>
 
   <p>
-  <img src="LANY.jpg" width="200" height="300" alt="concerts">
+  < style="float: right; img src="LANY.jpg" width="200" height="300" alt="concerts">
   I love going to concerts!!
   <ul style="list-style-type:circle">
     <li>Romeo Santos</li>
